# datasight

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  demo.tape  dist-workspace.toml  qa.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
examples/: create_test_parquet.rs
src/: app.rs  app_tests.rs  config.rs  events.rs  main.rs  ui.rs
tests/fixtures/: orders.json  orders.ndjson  orders.parquet  orders.tsv  orders_nulls.csv  wide.csv
