[package]
name = "datasight"
version = "0.2.0"
edition = "2021"
description = "A terminal viewer for tabular data files (CSV, Parquet) with vim-style navigation and plotting"
license = "MIT"
repository = "https://github.com/SpollaL/datasight"
rust-version = "1.75"
keywords = ["csv", "parquet", "tui", "terminal", "viewer"]
categories = ["command-line-utilities", "visualization"]
exclude = [".github", "demo.tape", "tests/fixtures/*.parquet", "tests/fixtures/*.ndjson"]

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
polars = { version = "0.46", features = ["csv", "parquet", "lazy", "strings", "regex", "json"] }
catppuccin = "2"
clap = { version = "4", features = ["derive"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
